bin/tests/errors_sema/sema/sema_err_invalid_alignof.swg
#global fileprivate

namespace NS {}

#test
{
    const x = #alignof(NS) // swc-expected-error {{sema_err_invalid_alignof}}
}
